--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,7 +35,7 @@ body {
 }
 
 .frame {
-    background-image: url(../images/frame_4.png);
+    /*background-image: url(../images/frame_4.png);*/
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -70,6 +70,7 @@ body {
 .info {
     width: 100%;
     height: 100%;
+    top: 0;
     position: absolute;
     box-sizing: border-box;
     transform: rotateY(180deg) translateZ(1px);
@@ -125,6 +126,7 @@ body {
 .video-container-box {
     position: relative;
     display: inline-block;
+    max-height: 100%;
 }
 
 @keyframes button-clicked {
@@ -162,6 +164,7 @@ body {
         background-color: white;
         font-size: 40px;
         height: auto;
+        top: auto;
     }
 
     .info .names {
