--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: vfwedding01;
-    src: url(../fonts/utm_edwardian.TTF);
+    src: url(../fonts/utm_edwardian_kt.TTF);
 }
 
 @font-face {
