clean-up resources

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,12 +14,18 @@
     src: url(../fonts/Vollkorn-Regular.ttf);
 }
 
+@font-face {
+    font-family: voll-korn;
+    font-weight: bold;
+    src: url(../fonts/Vollkorn-Bold.ttf);
+}
+
 body {
     margin: 0;
 }
 
 .video-container {
-    background: white;
+    background: #E6E8DF;
     position: relative;
     text-align: center;
     width: 100%;
@@ -159,13 +165,8 @@ body {
 
 @media (orientation:portrait) {
 
-    body {
-        background-color: white;
-    }
-
     .info {
         transform: none;
-        background-color: white;
         font-size: 40px;
         height: auto;
         top: auto;
