--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -120,7 +120,7 @@ body {
     top: 50%;
     left: 50%;
     width: 150px;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(100%);
     z-index: 1;
 }
 
