--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,10 +23,6 @@
 body {
     margin: 0;
     background: #E6E8DF;
-    background-image: url(../images/background_5.jpg);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-position: bottom;
 }
 
 .video-container {
@@ -34,6 +30,10 @@ body {
     text-align: center;
     width: 100%;
     height: 100%;
+    background-image: url(../images/background_5.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: bottom;
 }
 
 .video-container-inner {
@@ -179,7 +179,12 @@ body {
         font-size: 40px;
         height: auto;
         top: auto;
-        padding: 100px 50px;
+    }
+
+    @media (min-height: 1500px) {
+        .info {
+            padding: 100px 50px;
+        }
     }
 
     @media (min-height: 2000px) {
@@ -201,7 +206,7 @@ body {
         font-size: 40px;
     }
 
-    body {
+    .video-container {
         background-image: url(../images/background_5-portrait.jpg);
         background-size: 100% auto;
     }
